fix(NavigationTree): fix actions overflow

--- a/src/components/TreeView/TreeView.scss
+++ b/src/components/TreeView/TreeView.scss
@@ -77,8 +77,6 @@ $step-offset: 24px;
         margin-left: 6px;
 
         align-items: center;
-
-        overflow: hidden;
     }
 
     .tree-view_arrow {
